@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <addon id="plugin.video.hulu"
        name="Hulu"
-       version="2.8.1"
+       version="2.8.2"
        provider-name="BlueCop">
   <requires>
     <import addon="xbmc.python" version="1.0"/>
     <import addon="script.module.beautifulsoup" version="3.0.8"/>
     <import addon="script.module.cryptopy" version="1.2.5"/>
-    <import addon="script.module.common.playback" version="0.0.1"/>
   </requires>
   <extension point="xbmc.python.pluginsource"
              library="default.py">
